<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appwidget_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buy_button"
        android:layout_centerHorizontal="true"
        android:text="@string/appwidget_text2"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buy_button"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:text="@string/buy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/day_counter"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:gravity="center_vertical"
        android:text="@string/day_counter"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>




































<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:background="#333">-->

<!--<TextView-->
    <!--android:id="@+id/appwidget_text"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:text="@string/appwidget_text"-->
    <!--android:textColor="#ffffff"-->
    <!--android:textSize="12sp"-->
    <!--android:textStyle="bold|italic"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.5"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

<!--<TextView-->
    <!--android:id="@+id/appwidget_text2"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="50dp"-->
    <!--android:text="@string/appwidget_text2"-->
    <!--android:textColor="#ffffff"-->
    <!--android:textSize="12sp"-->
    <!--android:textStyle="bold|italic"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.5"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

<!--<Button-->
    <!--android:id="@+id/buy_button"-->
    <!--android:layout_width="100dp"-->
    <!--android:layout_height="66dp"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_marginEnd="30dp"-->
    <!--android:text="@string/buy_button"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

<!--<TextView-->
    <!--android:id="@+id/day_counter"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="63dp"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_marginStart="30dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:text="@string/days_remaining"-->
    <!--android:textColor="#ffffff"-->
    <!--android:textSize="12sp"-->
    <!--android:textStyle="bold|italic"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

<!--</RelativeLayout>-->